<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Red Alert</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="first_clock">ADP Sign In</string>
    <string name="start_Timer">Start Timer</string>
    <string name="no_parking">No Parking Set</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Accept</string>
    <string name="image_credit">Image Credits</string>
    <string name="repeat_workday">Repeat on work days</string>
    
</resources>
