<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <ImageView
            android:src="@drawable/adp_login_normal"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:scaleType="center"
            android:background="#FFFF0000"
            android:contentDescription="@string/app_name" />
    <EditText
            android:id="@+id/username"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/username" />
    <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/password"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/login_dialog_cancel"
                android:layout_weight="1"
                android:background="@drawable/login_red_button"
                style="@style/ButtonText"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>
            <Button
                android:id="@+id/login_dialog_confirm"
                android:background="@drawable/login_red_button"
                style="@style/ButtonText"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/confirm"/>
    </LinearLayout>

</LinearLayout>